--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap'); */
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300&display=swap');
+
 body{
   font-family: 'Montserrat', sans-serif;
   position: relative;
